Updates to Http: separate md5 from etag, switch from URL to URI
git-svn-id: http://jclouds.googlecode.com/svn/trunk@1909 3d8758e0-26b5-11de-8745-db77d3ebf521